# iptr

./: Cargo.toml  README.md
.github/workflows/: ci.yml
iptr-decoder/: Cargo.toml  README.md
iptr-decoder/CHANGELOG/: v0.1.1.md  v0.1.2.md  v0.1.3.md
iptr-decoder/examples/: raw-logger.rs
iptr-decoder/fuzz/: Cargo.toml
iptr-decoder/fuzz/fuzz_targets/: fuzz_target_1.rs
iptr-decoder/src/: error.rs  lib.rs  utils.rs
iptr-decoder/src/packet_handler/: combined.rs  log.rs  mod.rs  packet_counter.rs
iptr-decoder/src/raw_packet_handler/: level1.rs  level2.rs  mod.rs
iptr-edge-analyzer/: Cargo.toml  README.md
iptr-edge-analyzer/CHANGELOG/: v0.2.0.md  v0.3.0.md
iptr-edge-analyzer/src/: control_flow_cache.rs  control_flow_handler.rs  diagnose.rs  error.rs  lib.rs  memory_reader.rs  static_analyzer.rs  tnt_buffer.rs
iptr-edge-analyzer/src/control_flow_analyzer/: mod.rs  static.rs  tnt_buffer.rs
iptr-edge-analyzer/src/control_flow_cache/: cache.rs  mod.rs
iptr-edge-analyzer/src/control_flow_handler/: combined.rs  fuzz_bitmap.rs  log.rs  mod.rs
iptr-edge-analyzer/src/memory_reader/: libxdc.rs  mod.rs  perf_mmap.rs
iptr-perf-pt-reader/: Cargo.toml  README.md
iptr-perf-pt-reader/src/: error.rs  lib.rs  memory_reader.rs  util.rs
tools/iptr-libxdc-exp/: Cargo.toml
tools/iptr-libxdc-exp/src/: lib.rs  memory_reader.rs
tools/iptr-libxdc-experiments-standalone-decoder/: Cargo.toml
tools/iptr-libxdc-experiments-standalone-decoder/src/: control_flow_handler.rs  main.rs  memory_reader.rs
tools/iptr-perf-memory-extractor/: Cargo.toml  README.md
tools/iptr-perf-memory-extractor/src/: main.rs
tools/iptr-perf-pt-analyzer/: Cargo.toml  README.md
tools/iptr-perf-pt-analyzer/src/: control_flow_handler.rs  main.rs  memory_reader.rs
tools/iptr-perf-pt-extractor/: Cargo.toml  README.md
tools/iptr-perf-pt-extractor/src/: main.rs
tools/iptr-raw-logger/: Cargo.toml  README.md
tools/iptr-raw-logger/src/: main.rs
