[workspace]
resolver = "3"
members = [
  "iptr-decoder",
  "iptr-edge-analyzer",
  "iptr-perf-pt-reader",
  "tools/iptr-libxdc-exp",
  "tools/iptr-perf-memory-extractor",
  "tools/iptr-perf-pt-analyzer",
  "tools/iptr-perf-pt-extractor",
  "tools/iptr-raw-logger",
]

[workspace.dependencies]
iptr-decoder = { path = "./iptr-decoder", version = "0.1" }
iptr-edge-analyzer = { path = "./iptr-edge-analyzer", version = "0.2" }
iptr-perf-pt-reader = { path = "./iptr-perf-pt-reader", version = "0.1" }

thiserror = "2"
derive_more = "2"
perfect-derive = "0.1"
memchr = "2.7"
log = "0.4"
env_logger = "0.11"
clap = "4"
anyhow = "1"
memmap2 = "0.9"
iced-x86 = "1.21"
hashbrown = "0.16"
zerocopy = "0.8"
derive_hash_fast = "0.2"
serde = "1"
serde_json = "1"
indicatif = "0.18"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Evian-Zhang/iptr/"
homepage = "https://github.com/Evian-Zhang/iptr/"
readme = "./README.md"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
inline_always = "allow"
cast_lossless = "allow"
unnecessary_cast = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
strip = "none"
debug-assertions = true
