[package]
name = "iptr-decoder"
description = "Low-level Intel PT decoder"
keywords = ["Intel PT"]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
alloc = []

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
memchr = { workspace = true }
perfect-derive = { workspace = true }
log = { workspace = true }
