[package]
name = "iptr-decoder"
description = "Low-level Intel PT decoder"
keywords = ["Intel PT"]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = []
alloc = []
log_handler = [
  "alloc",
] # Enable crate::packet_handler::log, which includes handler for logging low level packets

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
memchr = { workspace = true }
perfect-derive = { workspace = true }
log = { workspace = true }
