[package]
name = "iptr-edge-analyzer"
description = "Analyze edges in Intel PT data"
keywords = ["Intel PT"]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = []
## Enable cache to boost the performance.
## However, when enabling this feature, you should carefully
## design the `CachedKey` structure of your control flow handler,
## otherwise the callbacks would be wrongly passed since we have
## cached most of PT packet handling
cache = []
## Add more diagnostic information in the `DiagnosticInformation`
## structure. These information would impose a little performance
## overhead, but is very useful for debugging.
more_diagnose = []
## Enable `HandleControlFlow` implementor fuzz bitmap control flow
## handler.
fuzz_bitmap = []
perf_memory_reader = ["dep:iptr-perf-pt-reader", "dep:memmap2", "dep:log"]
libxdc_memory_reader = ["dep:memmap2"]
log_control_flow_handler = ["dep:log"]

[lints]
workspace = true

[dependencies]
iptr-decoder = { workspace = true }
iptr-perf-pt-reader = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
log = { workspace = true, optional = true }
thiserror = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
perfect-derive = { workspace = true }
iced-x86 = { workspace = true }
hashbrown = { workspace = true }
zerocopy = { workspace = true, features = ["derive"] }
derive_hash_fast = { workspace = true }
