[package]
name = "iptr-edge-analyzer"
description = "Extract edges and branches in Intel PT traces, and construct AFL++-compatible fuzzing bitmaps"
keywords = ["intel-pt", "aflplusplus", "fuzzing", "bitmap"]
version = "0.3.0"
categories = ["parser-implementations", "hardware-support", "security"]
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[features]
default = []
## Enable cache to boost the performance.
## However, when enabling this feature, you should carefully
## design the `CachedKey` structure of your control flow handler,
## otherwise the callbacks would be wrongly passed since we have
## cached most of PT packet handling
cache = []
## Add more diagnostic information in the `DiagnosticInformation`
## structure. These information would impose a little performance
## overhead, but is very useful for debugging.
more_diagnose = []
## Enable `HandleControlFlow` implementor fuzz bitmap control flow
## handler.
fuzz_bitmap = []
## Enable `PerfMmapBasedMemoryReader`
perf_memory_reader = ["dep:iptr-perf-pt-reader", "dep:memmap2", "dep:log"]
## Enable `LibxdcMemoryReader`
libxdc_memory_reader = ["dep:memmap2"]
## Enable `LogControlFlowHandler`
log_control_flow_handler = ["dep:log"]

[lints]
workspace = true

[dependencies]
iptr-decoder = { workspace = true }
iptr-perf-pt-reader = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
log = { workspace = true, optional = true }
thiserror = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
perfect-derive = { workspace = true }
iced-x86 = { workspace = true }
hashbrown = { workspace = true }
zerocopy = { workspace = true, features = ["derive"] }
derive_hash_fast = { workspace = true }
