[package]
name = "iptr-perf-pt-reader"
description = "Perf.data parser for Intel PT data"
keywords = ["Intel PT", "perf", "perf.data"]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[features]
default = []

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
