[package]
name = "iptr-perf-pt-reader"
description = "Perf.data parser for Intel PT data"
keywords = ["intel-pt", "perf", "perf_data"]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
