[package]
name = "iptr-libxdc-exp"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[features]
default = []
## Add diagnostic information output
##
## The diagnose information will only be printed
## if "debug" feature is not activated (otherwise
## the stderr will be in a mess)
diagnose = ["iptr-edge-analyzer/more_diagnose"]
## Enable debug logging for each low level packets
debug = ["iptr-decoder/log_handler"]

[dependencies]
iptr-decoder = { workspace = true }
iptr-edge-analyzer = { workspace = true, features = [
  "cache",
  "fuzz_bitmap",
  "libxdc_memory_reader",
] }
clap = { workspace = true, features = ["derive"] }
memmap2 = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
indicatif = { workspace = true }
