[package]
name = "iptr-libxdc-experiments-standalone-decoder"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
iptr-decoder = { workspace = true }
iptr-edge-analyzer = { workspace = true }
clap = { workspace = true, features = ["derive"] }
memmap2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hashbrown = { workspace = true }
