[package]
name = "iptr-libxdc-experiments-standalone-decoder"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[features]
default = []
debug = [
  "iptr-decoder/log_handler",
] # Enable debug logging for each low level packets

[dependencies]
iptr-decoder = { workspace = true }
iptr-edge-analyzer = { workspace = true }
clap = { workspace = true, features = ["derive"] }
memmap2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hashbrown = { workspace = true }
