[package]
name = "iptr-perf-memory-extractor"
description = "Extract memory content in perf.data into libxdc experiments format."
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
iptr-edge-analyzer = { workspace = true, features = ["perf_memory_reader"] }
iptr-perf-pt-reader = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
memmap2 = { workspace = true }

[lints]
workspace = true
