[package]
name = "iptr-perf-pt-analyzer"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[features]
default = []
debug = [
  "iptr-decoder/log_handler",
] # Enable debug logging for each low level packets

[dependencies]
iptr-decoder = { workspace = true }
iptr-edge-analyzer = { workspace = true, features = ["cache"] }
iptr-perf-pt-reader = { workspace = true, features = ["memory_reader"] }
env_logger = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
memmap2 = { workspace = true }
