[package]
name = "iptr-perf-pt-analyzer"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[features]
default = []
debug = [
  "iptr-decoder/log_handler",
] # Enable debug logging for each low level packets

[dependencies]
iptr-decoder = { workspace = true }
iptr-edge-analyzer = { workspace = true, features = [
  "cache",
  "perf_memory_reader",
] }
iptr-perf-pt-reader = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
memmap2 = { workspace = true }
