[package]
name = "iptr-perf-pt-analyzer"
description = "Decode the Intel PT trace in perf.data file with semantic validation."
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[features]
default = []
## Enable debug logging for each low level packets
debug = ["iptr-decoder/log_handler"]

[dependencies]
iptr-decoder = { workspace = true }
iptr-edge-analyzer = { workspace = true, features = [
  "cache",
  "perf_memory_reader",
] }
iptr-perf-pt-reader = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
memmap2 = { workspace = true }
