[package]
name = "iptr-perf-pt-extractor"
description = "Tool to extract Intel PT AUXTRACE from perf.data"
keywords = ["Intel PT", "perf", "perf.data"]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
iptr-perf-pt-reader = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
memmap2 = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
