[package]
name = "iptr-raw-logger"
version = "0.1.0"
edition = "2024"

[dependencies]
iptr-decoder = { workspace = true }
iptr-perf-pt-reader = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
memmap2 = { workspace = true }
