[package]
name = "iptr-raw-logger"
description = "Decode and log details for Intel PT packets"
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
iptr-decoder = { workspace = true, features = ["log_handler"] }
iptr-perf-pt-reader = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
memmap2 = { workspace = true }
